update image location

--- a/posts/2017-08-24-Intro.md
+++ b/posts/2017-08-24-Intro.md
@@ -1,11 +1,11 @@
 # What is conversational blogging?
 
-**Conversational Blogging**  
-_noun._  
-Chronologically stored entries in a website as a means for structured conversation  
-Source: [1](https://www.youtube.com/watch?v=dQw4w9WgXcQ)  
+> **Conversational Blogging**  
+> _noun._  
+> Chronologically stored entries in a website as a means for structured conversation  
+> Source: [1](https://www.youtube.com/watch?v=dQw4w9WgXcQ)  
 
-> Okay, I'll admit it. I just made that up.
+Okay, I'll admit it. I just made that up.
 
 # Purpose
 I want to have thoughtful well structured conversation with my friends that I frequently see.  
@@ -14,7 +14,7 @@ Instant messaging sucks! It's great for figuring out who's in town or setting up
   
 Let's bring back the days of snail mail and pen pals. No more convoluted wall-of-texts. No more rushing to splurt out dilute thoughts. Let's brew some rich discussions with the help of modern blog formatting.
 
-![Exhibit. A](./img/00WallOfText.jpg)  
+![Exhibit. A](../img/2017-08-24-WallOfText.jpg)  
 Exhibit. A: The dreaded wall of text  
 
 # How to make it work
